Add recipe page link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="https://www.allrecipes.com/recipe/279273/baked-old-bay-salmon/"></a>
+    <a href="https://www.allrecipes.com/recipe/279273/baked-old-bay-salmon/">Baked Salmon</a>
 </body>
 </html>
