--- a/recipes/baked-salmon.html
+++ b/recipes/baked-salmon.html
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>Baked Salmon</h1>
+
+    <img src="./baked-salmon-pic.jpg">
+
+    <h2>Description</h2>
+
+    <h3>Ingredients</h3>
+
+    <ul>
+        <li>1 serving cooking spray</li>
+        <li>2 pound salmon fillet</li>
+        <li>2 tablespoons mayonnaise</li>
+        <li>2 tablespoons seafood seasoning</li>
+    </ul>
+
+    <h3>Steps</h3>
+
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Line a large baking sheet with aluminum foil and spray with cooking spray.</li>
+        <li>Place salmon on the prepared baking sheet. Spread with mayonnaise and sprinkle with Old Bay® seasoning.</li>
+        <li>Bake in preheated oven until fish flakes easily with a fork, about 20 minutes.</li>
+    </ol>
 </body>
 </html>
